rust/parser/RustParser.py
# Generated from Rust.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RustParser ( Parser ):

    grammarFileName = "Rust.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'use'", "'{'", "'}'", "';'", "'='", "'static'", 
                     "'union'", "'unsafe'", "'type'", "'impl'", "'extern'", 
                     "'fn'", "'->'", "'pub'", "'struct'", "'()'", "'*'", 
                     "'i8'", "'i16'", "'i32'", "'i64'", "'i128'", "'u8'", 
                     "'u16'", "'u32'", "'u64'", "'u128'", "'f32'", "'f64'", 
                     "'bool'", "'char'", "'String'", "'<'", "'&'", "'break'", 
                     "'continue'", "'let'", "'else'", "'.'", "'ref'", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", 
                     "'match'", "'|'", "'=>'", "'return'", "'while'", "'for'", 
                     "'in'", "'if'", "'else if'", "'loop'", "'Some'", "'Box'", 
                     "'as'", "'..'", "'/'", "'%'", "'+'", "'-'", "'=='", 
                     "'!='", "'||'", "'&&'", "'>>'", "'>='", "'<='", "'b'.''", 
                     "'b'|''", "'b'*''", "'b''", "'''", "'b'+''", "'b'?''", 
                     "'true'", "'false'", "'None'", "'mut'", "'const'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'::'", "'!'", "'>'", "'#'", "'['", "']'", "','", "'('", 
                     "')'", "'_'", "':'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TRUE", "FALSE", "NONE", "MUT", "CONST", 
                      "Binary", "STRING_LITERAL", "Identifier", "Number", 
                      "SignedNumber", "BYTE_STRING_LITERAL", "HexNumber", 
                      "CHAR_LITERAL", "DOUBLE_COLON", "EXCL", "GT", "POUND", 
                      "LBRACK", "RBRACK", "COMMA", "LPAREN", "RPAREN", "UNDERSCORE", 
                      "COLON", "ELLIPSIS", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_topLevelItem = 1
    RULE_useDecl = 2
    RULE_topLevelDef = 3
    RULE_topLevelVarDef = 4
    RULE_staticVarDecl = 5
    RULE_defKind = 6
    RULE_varDefField = 7
    RULE_typeAlias = 8
    RULE_interfaceDef = 9
    RULE_externBlock = 10
    RULE_externItem = 11
    RULE_visibility = 12
    RULE_unsafeModifier = 13
    RULE_externAbi = 14
    RULE_attributes = 15
    RULE_innerAttribute = 16
    RULE_attribute = 17
    RULE_attrArgs = 18
    RULE_attrArg = 19
    RULE_attrValue = 20
    RULE_structDef = 21
    RULE_structField = 22
    RULE_structLiteral = 23
    RULE_structLiteralField = 24
    RULE_functionDef = 25
    RULE_paramList = 26
    RULE_param = 27
    RULE_typePath = 28
    RULE_typeExpression = 29
    RULE_basicType = 30
    RULE_pointerType = 31
    RULE_scalarType = 32
    RULE_intType = 33
    RULE_signedIntType = 34
    RULE_unsignedIntType = 35
    RULE_floatingPointType = 36
    RULE_boolType = 37
    RULE_charType = 38
    RULE_stdLibraryType = 39
    RULE_stringType = 40
    RULE_arrayType = 41
    RULE_pathType = 42
    RULE_genericType = 43
    RULE_referenceType = 44
    RULE_sliceType = 45
    RULE_unitType = 46
    RULE_externalType = 47
    RULE_block = 48
    RULE_statement = 49
    RULE_conditionalAssignmentStmt = 50
    RULE_functionCall = 51
    RULE_letStmt = 52
    RULE_varDef = 53
    RULE_compoundOp = 54
    RULE_compoundAssignment = 55
    RULE_matchStmt = 56
    RULE_matchArm = 57
    RULE_matchPattern = 58
    RULE_whileStmt = 59
    RULE_initializer = 60
    RULE_initBlock = 61
    RULE_assignStmt = 62
    RULE_forStmt = 63
    RULE_ifStmt = 64
    RULE_exprStmt = 65
    RULE_returnStmt = 66
    RULE_loopStmt = 67
    RULE_safeWrapper = 68
    RULE_expression = 69
    RULE_unsafeExpression = 70
    RULE_qualifiedExpression = 71
    RULE_structDefInit = 72
    RULE_arrayDeclaration = 73
    RULE_typePathExpression = 74
    RULE_patternPrefix = 75
    RULE_pattern = 76
    RULE_castExpressionPostFix = 77
    RULE_compoundOps = 78
    RULE_rangeSymbol = 79
    RULE_binaryOps = 80
    RULE_structFieldDec = 81
    RULE_unaryOpes = 82
    RULE_parenExpression = 83
    RULE_dereferenceExpression = 84
    RULE_expressionBlock = 85
    RULE_borrowExpression = 86
    RULE_primaryExpression = 87
    RULE_fieldAccessPostFix = 88
    RULE_callExpressionPostFix = 89
    RULE_functionCallArgs = 90
    RULE_literal = 91
    RULE_byteLiteral = 92
    RULE_booleanLiteral = 93
    RULE_arrayAccess = 94
    RULE_arrayLiteral = 95

    ruleNames =  [ "program", "topLevelItem", "useDecl", "topLevelDef", 
                   "topLevelVarDef", "staticVarDecl", "defKind", "varDefField", 
                   "typeAlias", "interfaceDef", "externBlock", "externItem", 
                   "visibility", "unsafeModifier", "externAbi", "attributes", 
                   "innerAttribute", "attribute", "attrArgs", "attrArg", 
                   "attrValue", "structDef", "structField", "structLiteral", 
                   "structLiteralField", "functionDef", "paramList", "param", 
                   "typePath", "typeExpression", "basicType", "pointerType", 
                   "scalarType", "intType", "signedIntType", "unsignedIntType", 
                   "floatingPointType", "boolType", "charType", "stdLibraryType", 
                   "stringType", "arrayType", "pathType", "genericType", 
                   "referenceType", "sliceType", "unitType", "externalType", 
                   "block", "statement", "conditionalAssignmentStmt", "functionCall", 
                   "letStmt", "varDef", "compoundOp", "compoundAssignment", 
                   "matchStmt", "matchArm", "matchPattern", "whileStmt", 
                   "initializer", "initBlock", "assignStmt", "forStmt", 
                   "ifStmt", "exprStmt", "returnStmt", "loopStmt", "safeWrapper", 
                   "expression", "unsafeExpression", "qualifiedExpression", 
                   "structDefInit", "arrayDeclaration", "typePathExpression", 
                   "patternPrefix", "pattern", "castExpressionPostFix", 
                   "compoundOps", "rangeSymbol", "binaryOps", "structFieldDec", 
                   "unaryOpes", "parenExpression", "dereferenceExpression", 
                   "expressionBlock", "borrowExpression", "primaryExpression", 
                   "fieldAccessPostFix", "callExpressionPostFix", "functionCallArgs", 
                   "literal", "byteLiteral", "booleanLiteral", "arrayAccess", 
                   "arrayLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    TRUE=81
    FALSE=82
    NONE=83
    MUT=84
    CONST=85
    Binary=86
    STRING_LITERAL=87
    Identifier=88
    Number=89
    SignedNumber=90
    BYTE_STRING_LITERAL=91
    HexNumber=92
    CHAR_LITERAL=93
    DOUBLE_COLON=94
    EXCL=95
    GT=96
    POUND=97
    LBRACK=98
    RBRACK=99
    COMMA=100
    LPAREN=101
    RPAREN=102
    UNDERSCORE=103
    COLON=104
    ELLIPSIS=105
    WS=106
    COMMENT=107

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topLevelItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustParser.TopLevelItemContext)
            else:
                return self.getTypedRuleContext(RustParser.TopLevelItemContext,i)


        def getRuleIndex(self):
            return RustParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = RustParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 57282) != 0) or ((((_la - 84)) & ~0x3f) == 0 and ((1 << (_la - 84)) & 8211) != 0):
                self.state = 192
                self.topLevelItem()
                self.state = 197
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topLevelDef(self):
            return self.getTypedRuleContext(RustParser.TopLevelDefContext,0)


        def staticVarDecl(self):
            return self.getTypedRuleContext(RustParser.StaticVarDeclContext,0)


        def attributes(self):
            return self.getTypedRuleContext(RustParser.AttributesContext,0)


        def externBlock(self):
            return self.getTypedRuleContext(RustParser.ExternBlockContext,0)


        def useDecl(self):
            return self.getTypedRuleContext(RustParser.UseDeclContext,0)


        def typeAlias(self):
            return self.getTypedRuleContext(RustParser.TypeAliasContext,0)


        def getRuleIndex(self):
            return RustParser.RULE_topLevelItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelItem" ):
                listener.enterTopLevelItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelItem" ):
                listener.exitTopLevelItem(self)




    def topLevelItem(self):

        localctx = RustParser.TopLevelItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelItem)
        try:
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.topLevelDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.staticVarDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 200
                self.attributes()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 201
                self.externBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 202
                self.useDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 203
                self.typeAlias()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typePath(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustParser.TypePathContext)
            else:
                return self.getTypedRuleContext(RustParser.TypePathContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RustParser.COMMA)
            else:
                return self.getToken(RustParser.COMMA, i)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(RustParser.Identifier)
            else:
                return self.getToken(RustParser.Identifier, i)

        def getRuleIndex(self):
            return RustParser.RULE_useDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseDecl" ):
                listener.enterUseDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseDecl" ):
                listener.exitUseDecl(self)




    def useDecl(self):

        localctx = RustParser.UseDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_useDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.match(RustParser.T__0)
            self.state = 207
            self.typePath()
            self.state = 238
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 208
                self.match(RustParser.T__1)
                self.state = 231
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2 or _la==88 or _la==94:
                    self.state = 210
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 209
                        self.typePath()


                    self.state = 224
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [88]:
                        self.state = 212
                        self.match(RustParser.Identifier)
                        pass
                    elif token in [2]:
                        self.state = 213
                        self.match(RustParser.T__1)
                        self.state = 220
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==88:
                            self.state = 214
                            self.match(RustParser.Identifier)
                            self.state = 216
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==100:
                                self.state = 215
                                self.match(RustParser.COMMA)


                            self.state = 222
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 223
                        self.match(RustParser.T__2)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 227
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==100:
                        self.state = 226
                        self.match(RustParser.COMMA)


                    self.state = 233
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 234
                self.match(RustParser.T__2)
                self.state = 235
                self.match(RustParser.COMMA)
                self.state = 240
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 241
            self.match(RustParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDef(self):
            return self.getTypedRuleContext(RustParser.FunctionDefContext,0)


        def structDef(self):
            return self.getTypedRuleContext(RustParser.StructDefContext,0)


        def interfaceDef(self):
            return self.getTypedRuleContext(RustParser.InterfaceDefContext,0)


        def topLevelVarDef(self):
            return self.getTypedRuleContext(RustParser.TopLevelVarDefContext,0)


        def getRuleIndex(self):
            return RustParser.RULE_topLevelDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDef" ):
                listener.enterTopLevelDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDef" ):
                listener.exitTopLevelDef(self)




    def topLevelDef(self):

        localctx = RustParser.TopLevelDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_topLevelDef)
        try:
            self.state = 247
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 243
                self.functionDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 244
                self.structDef()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 245
                self.interfaceDef()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 246
                self.topLevelVarDef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelVarDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(RustParser.Identifier, 0)

        def visibility(self):
            return self.getTypedRuleContext(RustParser.VisibilityContext,0)


        def defKind(self):
            return self.getTypedRuleContext(RustParser.DefKindContext,0)


        def COLON(self):
            return self.getToken(RustParser.COLON, 0)

        def typeExpression(self):
            return self.getTypedRuleContext(RustParser.TypeExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(RustParser.ExpressionContext,0)


        def varDefField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustParser.VarDefFieldContext)
            else:
                return self.getTypedRuleContext(RustParser.VarDefFieldContext,i)


        def getRuleIndex(self):
            return RustParser.RULE_topLevelVarDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelVarDef" ):
                listener.enterTopLevelVarDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelVarDef" ):
                listener.exitTopLevelVarDef(self)




    def topLevelVarDef(self):

        localctx = RustParser.TopLevelVarDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_topLevelVarDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 250
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 249
                self.visibility()


            self.state = 253
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==8 or _la==85:
                self.state = 252
                self.defKind()


            self.state = 255
            self.match(RustParser.Identifier)
            self.state = 270
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [104]:
                self.state = 256
                self.match(RustParser.COLON)
                self.state = 257
                self.typeExpression()
                self.state = 258
                self.match(RustParser.T__4)
                self.state = 259
                self.expression(0)
                self.state = 260
                self.match(RustParser.T__3)
                pass
            elif token in [2]:
                self.state = 262
                self.match(RustParser.T__1)
                self.state = 266
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14 or _la==88:
                    self.state = 263
                    self.varDefField()
                    self.state = 268
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 269
                self.match(RustParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StaticVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(RustParser.Identifier)
            else:
                return self.getToken(RustParser.Identifier, i)

        def COLON(self):
            return self.getToken(RustParser.COLON, 0)

        def initializer(self):
            return self.getTypedRuleContext(RustParser.InitializerContext,0)


        def typeExpression(self):
            return self.getTypedRuleContext(RustParser.TypeExpressionContext,0)


        def visibility(self):
            return self.getTypedRuleContext(RustParser.VisibilityContext,0)


        def MUT(self):
            return self.getToken(RustParser.MUT, 0)

        def getRuleIndex(self):
            return RustParser.RULE_staticVarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStaticVarDecl" ):
                listener.enterStaticVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStaticVarDecl" ):
                listener.exitStaticVarDecl(self)




    def staticVarDecl(self):

        localctx = RustParser.StaticVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_staticVarDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 273
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 272
                self.visibility()


            self.state = 276
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 275
                self.match(RustParser.T__5)


            self.state = 279
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==84:
                self.state = 278
                self.match(RustParser.MUT)


            self.state = 281
            self.match(RustParser.Identifier)
            self.state = 282
            self.match(RustParser.COLON)
            self.state = 285
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 283
                self.typeExpression()
                pass

            elif la_ == 2:
                self.state = 284
                self.match(RustParser.Identifier)
                pass

